--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,18 @@
     <string name="text_view_place_holder">Text view place holder</string>
     <string name="otema_technologies">Otema Technologies</string>
     <string name="powered_by_otema_technologies">Powered By otema Technologies</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="save_details">Save Details</string>
+    <string name="please_provide_your_info">Please provide your info..</string>
+    <string name="primary_phone_number">Primary Phone Number</string>
 </resources>
